[1/2] Update index.html [1.1] Change Facebok link to XL19860214 Facebook Page [1.2] Add Facebook Chat Plugin for XL19860214 Facebook Page [1.3] Move to /css/main.css?v=6 [2] Update css/main.css [2.1] Fix #profile position center issue caused by Facebook Chat Plugin

--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@
     width: 560px;
     height: 696px; /* 572(576) + 70 + 40+10 */
     background-color: transparent;
-    position: absolute; /* absolute, fixed */
+    position: fixed; /* absolute, fixed */
     left: 0;
     right: 0;
     top: 0;
