--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,12 @@
     }
 }
 
+@media only screen and (min-width: 350px) and (min-height: 500px) {
+    #profile {
+        overflow: visible;
+    }
+}
+
 #profile #web {
     margin-top: 10px;
 }
