[1/3] Create background.html [1.1] Refactor Background module of index.html as standalone html [2] Update index.html [2.1] Include background.html as <iframe> [2.2] Move /css/main.css?v=9 [3] Update css/main.css [3.1] Add #background style description

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,15 @@
+/* Inline frame background */
+#background {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    border-width: 0;
+}
+
 /* Style all font awesome brand icons */
 .fab {
     padding: 20px;
