[1/2] Update css/main.css [1.1] Add mouse hover effect for favicon links [2] Update index.html [2.1] Move to /css/main.css?v=10

--- a/css/main.css
+++ b/css/main.css
@@ -135,3 +135,9 @@
     width: 16px;
     height: 16px;
 }
+
+/* Mouse hover effect for favicon links */
+a.favicon:hover img {
+    transform: scale(1.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
