[1/8] Rename css/backgroud.css to css/background.css [2] Rename icons/favicon-16x16.png to icons/icon-16x16.png [3] Rename icons/favicon-32x32.png to icons/icon-32x32.png [4] Update background.html [4.1] Change according to renames [5] Update index.html [5.1] Change according to renames [5.2] Add market links block [5.3] Move to /css/main.css?v=12 [5.4] Move to /js/scripts?v=3 [6] Update css/main.css [6.1] Extend height after adding market block [7] Update service-worker.js [7.1] Add install event handler [7.2] Add activate event handler [7.3] Refactor clousure format [7.4] Refactor cache naming [8] Update js/scripts.js [8.1] Move to /service-worker.js?v=2

--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@
     }
 }
 
-@media only screen and (max-height: 756px) {
+@media only screen and (max-height: 776px) {
     .fab {
         padding: 10px;
         font-size: 20px;
@@ -81,7 +81,7 @@
 /* Profile style */
 #profile {
     width: 560px;
-    height: 736px; /* 572(576) + 70 + 40+10 + 20 + 20 */
+    height: 756px; /* 572(576) + 70 + 40+10 + 20 + 20 + 20 */
     background-color: transparent;
     position: fixed; /* absolute, fixed */
     left: 0;
@@ -99,7 +99,7 @@
 @media only screen and (max-width: 580px) {
     #profile {
         width: 320px;
-        height: 481px; /* 327(331) + 40 + 60+10 + 20 + 20 */
+        height: 501px; /* 327(331) + 40 + 60+10 + 20 + 20 + 20 */
         overflow: auto;
     }
 
@@ -108,10 +108,10 @@
     }
 }
 
-@media only screen and (max-height: 756px) {
+@media only screen and (max-height: 776px) {
     #profile {
         width: 320px;
-        height: 481px; /* 327(331) + 40 + 60+10 + 20 + 20 */
+        height: 501px; /* 327(331) + 40 + 60+10 + 20 + 20 + 20 */
         overflow: auto;
     }
 
@@ -120,7 +120,7 @@
     }
 }
 
-@media only screen and (min-width: 340px) and (min-height: 501px) {
+@media only screen and (min-width: 340px) and (min-height: 521px) {
     #profile {
         overflow: visible;
     }
