--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@
     }
 }
 
-@media only screen and (max-height: 776px) {
+@media only screen and (max-height: 816px) {
     .fab {
         padding: 10px;
         font-size: 20px;
@@ -81,7 +81,7 @@
 /* Profile style */
 #profile {
     width: 560px;
-    height: 756px; /* 572(576) + 70 + 40+10 + 20 + 20 + 20 */
+    height: 796px; /* 572(576) + 70 + 40+10 + 20 + 20 + 20 + 20 + 20 */
     background-color: transparent;
     position: fixed; /* absolute, fixed */
     left: 0;
@@ -99,7 +99,7 @@
 @media only screen and (max-width: 580px) {
     #profile {
         width: 320px;
-        height: 501px; /* 327(331) + 40 + 60+10 + 20 + 20 + 20 */
+        height: 541px; /* 327(331) + 40 + 60+10 + 20 + 20 + 20 + 20 + 20 */
         overflow: auto;
     }
 
@@ -108,10 +108,10 @@
     }
 }
 
-@media only screen and (max-height: 776px) {
+@media only screen and (max-height: 816px) {
     #profile {
         width: 320px;
-        height: 501px; /* 327(331) + 40 + 60+10 + 20 + 20 + 20 */
+        height: 541px; /* 327(331) + 40 + 60+10 + 20 + 20 + 20 + 20 + 20 */
         overflow: auto;
     }
 
@@ -120,13 +120,13 @@
     }
 }
 
-@media only screen and (min-width: 340px) and (min-height: 521px) {
+@media only screen and (min-width: 340px) and (min-height: 561px) {
     #profile {
         overflow: visible;
     }
 }
 
-#profile #web {
+#websites {
     margin-top: 10px;
 }
 
