--- a/css/main.css
+++ b/css/main.css
@@ -126,6 +126,15 @@
     }
 }
 
+#profile .avatar a:hover img {
+    border-radius: 3rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
+    transform: scale(1.05);
+    transition: border-radius 1s, transform 0.5s;
+}
+
+/* */
+
 #websites {
     margin-top: 10px;
 }
